syntax = "proto3";

package platform;

option go_package = "github.com/ava-labs/avalanchego/proto/pb/platform";

// Platform defines the P-Chain APIs
service Platform {
  // GetHeight returns the current P-Chain height
  rpc GetHeight(GetHeightRequest) returns (GetHeightReply);
}

message GetHeightRequest {}

message GetHeightReply {
  uint64 height = 1;
}
